--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,119 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%22100090871756235%22%3A%22PFTmRBB4%22%2C%2261577206613409%22%3A%22Qx5EiinR%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-06-26T19:09:38.260Z",
+        "lastAccessed": "2025-06-26T19:09:38.260Z"
+    },
+    {
+        "key": "datr",
+        "value": "6xlbaFURx9l6d2qdwhWt6OLy",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-26T19:09:38.260Z",
+        "lastAccessed": "2025-06-26T19:09:38.260Z"
+    },
+    {
+        "key": "sb",
+        "value": "6xlbaH_5qAu_GgaVARhnReuJ",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-26T19:09:38.260Z",
+        "lastAccessed": "2025-06-26T19:09:38.260Z"
+    },
+    {
+        "key": "dpr",
+        "value": "2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-26T19:09:38.260Z",
+        "lastAccessed": "2025-06-26T19:09:38.260Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B785x393x2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-26T19:09:38.260Z",
+        "lastAccessed": "2025-06-26T19:09:38.260Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-26T19:09:38.260Z",
+        "lastAccessed": "2025-06-26T19:09:38.260Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-26T19:09:38.260Z",
+        "lastAccessed": "2025-06-26T19:09:38.260Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61577206613409",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-26T19:09:38.260Z",
+        "lastAccessed": "2025-06-26T19:09:38.260Z"
+    },
+    {
+        "key": "xs",
+        "value": "39%3AvDBQggsMHK6wBg%3A2%3A1750870510%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-26T19:09:38.260Z",
+        "lastAccessed": "2025-06-26T19:09:38.260Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-26T19:09:38.260Z",
+        "lastAccessed": "2025-06-26T19:09:38.260Z"
+    },
+    {
+        "key": "fr",
+        "value": "0wNWRlDJefOYI0Kfh.AWeu17FhggZGZh-vpIcmRwjbXvf-eLsZ2DJhR-F-80HhZ1dbUN8.BoWxnr..AAA.0.0.BoXZke.AWdJ69VHFHCgopX9BDp7x89ScGk",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-26T19:09:38.260Z",
+        "lastAccessed": "2025-06-26T19:09:38.260Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101733585%3BT%3A29182741",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-26T19:09:38.260Z",
+        "lastAccessed": "2025-06-26T19:09:38.260Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2854%3Btimestamp%3A1750964510",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-26T19:09:38.260Z",
+        "lastAccessed": "2025-06-26T19:09:38.260Z"
+    }
+]
